...
});

const maListe = 'list-ma-liste' as ListId;
const barbecue = 'list-barbecue' as ListId;

const articles = [
  article('lait', 'Lait', 'Crèmerie'),
  article('pommes', 'Pommes', 'Fruits et légumes'),
  article('farine', 'Farine', 'Épicerie salée'),
  article('beurre', 'Beurre', 'Crèmerie'),
  article('yaourt', LONG_ARTICLE_NAME, 'Crèmerie'),
];

...
